Futures and mappers added